[project]
name = "homeassistant-component-name"
version = "0.0.0"
license = { text = "MIT License" }
description = "A custom component for Home Assistant"
authors = [{ name = "MizterB", email = "5458030+MizterB@users.noreply.github.com"}]
maintainers = [{ name = "MizterB", email = "5458030+MizterB@users.noreply.github.com"}]
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3",
]
keywords = [
  "automation",
  "automations",
  "component",
  "custom component",
  "custom integration",
  "hacs-component",
  "hacs-integration",
  "hacs-repository",
  "hacs",
  "hass.io",
  "hass",
  "hassio",
  "home assistant",
  "home-assistant",
  "homeassistant",
  "integration",
]
requires-python = ">=3.13.2"
dependencies = [
    "homeassistant>=2025.5.0",
]

[project.urls]
Homepage = "https://github.com/MizterB/homeassistant-component-name"
Documentation = "https://github.com/MizterB/homeassistant-component-name"
Changelog = "https://github.com/MizterB/homeassistant-component-name/releases"
Support = "https://github.com/MizterB/homeassistant-component-name/issues"
Issues = "https://github.com/MizterB/homeassistant-component-name/issues"
Repository = "https://github.com/MizterB/homeassistant-component-name"
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["custom_components/spook"]

[tool.ruff]
src = ["custom_components/spook"]

[tool.ruff.lint]
ignore = [
  "A005", # It is just wrong
  "ANN401", # Opiniated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "RUF012", # Just broken
  "TC006", # Checks for unquoted type expressions in typing.cast() calls.
  "TID252", # Relative imports

  # Formatter conflicts
  "COM812",
  "COM819",
  "D206",
  "E501",
  "ISC001",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",
]
select = ["ALL"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.issue_registry" = "ir"
voluptuous = "vol"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
    "homeassistant",
]
combine-as-imports = true

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by ruff
# duplicate-code - unavoidable
# used-before-assignment - false positives with TYPE_CHECKING structures
disable = [
  "abstract-method",
  "duplicate-code",
  "format",
  "unexpected-keyword-arg",
  "used-before-assignment",
]

[tool.uv]
dev-dependencies = [
  "pre-commit>=3.6.0",
  "pre-commit-hooks>=4.5.0",
  "pylint>=3.1.0",
  "ruff>=0.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
